--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
 does this static web page like the good ol' 90s support any scripting lingos??
+
+- ok, so for someone who , like me, has never bothered with using these
+fancy site pages etc.
+
+1. I created repo with username.github.io
+
+2. add ssh key. e.g your favourite ed25519 key ,)
+
+3. check it works with ssh -T you@github.com I think it was :D 
+
+until successful:
+
+4.. I cloned it with https, so I will add this here, if so one has to change with
+
+git remote rm origin
+git remote add origin git@github.com:user/user.github.io
+
+and if not, it probably already works, by trying with
+
+ git push -u origin main
+
+
